// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DOMException > crossSerialize > scoped > supports DOMException 1`] = `"($R=>$R[0]=new DOMException("This is an example message.","Example"))($R["example"])"`;

exports[`DOMException > crossSerialize > supports DOMException 1`] = `"$R[0]=new DOMException("This is an example message.","Example")"`;

exports[`DOMException > crossSerializeAsync > scoped > supports DOMException 1`] = `"($R=>$R[0]=Promise.resolve($R[1]=new DOMException("This is an example message.","Example")))($R["example"])"`;

exports[`DOMException > crossSerializeAsync > supports DOMException 1`] = `"$R[0]=Promise.resolve($R[1]=new DOMException("This is an example message.","Example"))"`;

exports[`DOMException > crossSerializeStream > scoped > supports DOMException 1`] = `
"($R=>$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p)($R["example"])"
`;

exports[`DOMException > crossSerializeStream > scoped > supports DOMException 2`] = `
"($R=>($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=new DOMException("This is an example message.","Example")))($R["example"])"
`;

exports[`DOMException > crossSerializeStream > supports DOMException 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`DOMException > crossSerializeStream > supports DOMException 2`] = `
"($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=new DOMException("This is an example message.","Example"))"
`;

exports[`DOMException > serialize > supports DOMException 1`] = `"new DOMException("This is an example message.","Example")"`;

exports[`DOMException > serializeAsync > supports DOMException 1`] = `"Promise.resolve(new DOMException("This is an example message.","Example"))"`;

exports[`DOMException > toCrossJSON > supports DOMException 1`] = `"{"t":25,"i":0,"s":{"name":{"t":1,"s":"Example"},"message":{"t":1,"s":"This is an example message."}},"c":"seroval-plugins/web/DOMException"}"`;

exports[`DOMException > toCrossJSONAsync > supports DOMException 1`] = `"{"t":12,"i":0,"s":1,"f":{"t":25,"i":1,"s":{"name":{"t":1,"s":"Example"},"message":{"t":1,"s":"This is an example message."}},"c":"seroval-plugins/web/DOMException"}}"`;

exports[`DOMException > toCrossJSONStream > supports DOMException 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`DOMException > toCrossJSONStream > supports DOMException 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":4,"s":2},{"t":25,"i":3,"s":{"name":{"t":1,"s":"Example"},"message":{"t":1,"s":"This is an example message."}},"c":"seroval-plugins/web/DOMException"}]}"`;

exports[`DOMException > toJSON > supports DOMException 1`] = `"{"t":{"t":25,"i":0,"s":{"name":{"t":1,"s":"Example"},"message":{"t":1,"s":"This is an example message."}},"c":"seroval-plugins/web/DOMException"},"f":31,"m":[]}"`;

exports[`DOMException > toJSONAsync > supports DOMException 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":25,"i":1,"s":{"name":{"t":1,"s":"Example"},"message":{"t":1,"s":"This is an example message."}},"c":"seroval-plugins/web/DOMException"}},"f":31,"m":[]}"`;
